Emacs - Bind q to debugger-quit in for debugger-mode
Binding to quit-window leaves old backtrace around and prevents new ones from
being displayed.

--- a/emacs/.emacs.d/awaken.org
+++ b/emacs/.emacs.d/awaken.org
@@ -3568,7 +3568,7 @@ pressing \".\" before selecting the word. Otherwise, correct it."
 #+begin_src emacs-lisp
 (general-with-package 'debug
   (general-def 'normal debugger-mode-map
-    "q" #'quit-window)
+    "q" #'debugger-quit)
 
   (general-add-hook 'debugger-mode-hook #'evil-normalize-keymaps))
 #+end_src
